--- a/ItemManager/ItemManager.csproj
+++ b/ItemManager/ItemManager.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ItemManagerLibrary\ItemManagerLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
